samples/_failures_safe/1761622297_c8b01d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_446f7133.c: In function ‘main’:
./samples/SAFE/__tmp_446f7133.c:146:5: error: expected declaration or statement at end of input
  146 |     print_compression_info(ctx);
      |     ^~~~~~~~~~~~~~~~~~~~~~
